--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "workout-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ruth Cohen",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.11",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.0.3"
+    "express": "^4.18.3",
+    "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
