--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE=mongodb+srv://ruth12:<PASSWORD>@cluster0.felhnfk.mongodb.net/workouts_api?retryWrites=true&w=majority
 DATABASE_PASSWORD=MCx2Nue3LfRcJGZv
- 
+NODE_ENV=development
